css/style.css
/* FONTS IMPORTED */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    font-family: 'Bebas Neue', cursive;
font-family: 'Poppins', sans-serif;
}
header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 87px 120px 0 120px;
}

.navigation li{
    
    list-style: none;
    
    
}
.navigation a{
    text-decoration: none;
    color: black;
    margin: 35px;
    font-size: 16px;
}
.navigation ul{
    display: flex;
    
}

/* Banner area styles */

.container{
    margin: 0 auto;
    padding: 0 120px;
    
}
.banner{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 133px;
}
.banner-text{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    
}
.banner-text h1{
    font-size: 52px;
    line-height: 70px;
    padding-bottom: 16px;
}
.banner-text p{
    font-size: 16px;
    line-height: 24px;
    padding-bottom: 16px;
}
.primary-button{
    padding: 10px 24px;
    background: #E02C6D;
    color: white;
    border-radius: 41px;
    border: none;
    font: inherit;
    font-size: 16px;
    letter-spacing: 1px;
}
.button-container:hover button{
    background-color: tomato;
    color: black;
    transform: scale(1.2);
    transition: transform 0.5s ease-in-out;
}

.banner-image{
    
   background-image: url("../images/Circle\ design.svg");
   background-repeat: no-repeat;

   width: 475px;
height: 475px;

}
.banner-image img{
    width: 440px;
height: 414px;
}
.banner-image:hover img{
    transform: rotate(720deg);
    transition: transform 2s ease-in-out;
}

/* LOGOS AREA */
.logos{
   
    display: grid;
   grid-template-columns: repeat(7,1fr);
    margin: 100px 165px;

}

/* Popular Collection Area */

.popular-title{
    text-align: center;
    font-weight: 600;
    font-size: 28px;
    padding: 30px 0;
}
.product-container{
    display: flex;
    justify-content: center;
}
.popular-products{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-gap: 30px;
 
}
.product{
    width: 329px;
    height: 476px;
    display: flex;
    flex-direction: column;
    padding: 17px 15px;
    overflow: hidden;
    background: #FFFFFF;
    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
    border-radius: 5px;
}
.product-image{
    overflow: hidden;
}
.product:hover img{
    transform: scale(1.28);
    transition: transform 0.7s ease-in-out;
    
}
.product-title{
    font-weight: 500;
font-size: 28px;
line-height: 40px;
}
.product-price{
    font-weight: 400;
font-size: 24px;
line-height: 150%;
}
.product-rating{
    font-weight: bold;
    font-size: 14px;
    line-height: 22px;
    color: #FB8200;
}
.rating-score{
    color: #5E6366;
}
.product-assurance{
    font-weight: bold;
    font-size: 14px;
    line-height: 143%;
    letter-spacing: 0.018em;
    color: #787885;
    Width: 196px;
    Height: 61px;
    
}
.see-more{
    position: relative;
    left: 290%;
   
}
.see-more a{
     text-decoration: none;
    color: #E02C6D;
}
/* Creative Area */
.form{
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: center;
    align-items: center;
}
.form-title{
    margin-left: 400px;
    background-image: linear-gradient(whitesmoke,white,whitesmoke,rgba(255, 99, 71, 0.479));
    border-radius: 5px;
}
form{
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin-left: 20px;
    margin-bottom: 10px;
}
.field{
    padding: 10px 30px;
    margin-bottom: 10px;
     background-image: linear-gradient(whitesmoke,white,whitesmoke,tomato);
    border: none;
     border-radius: 5px;
    
}


/* FOOTER AREA */
footer{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: #0A0826;
    color: white;
    

}
footer small{
    font-size: 14px;
line-height: 24px;
font-weight: 300;
}

   /* MEDIA QUERY AREA */
/* Mobile device */
 @media (max-width:700px){
     main{
         overflow: hidden;
     }
    .navigation ul{
        display: block;
    }
    header{
        margin: 10px 0;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        
    }
    .head-title{
        padding-left: 18%;
    }
     .logos{
         display: none;
     }
     
    
     .banner,.popular-products,.creative{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         row-gap:15px ;
         
         
     }
     .banner-image{
         display: flex;
         justify-content: center;
     }
     .banner-image img{
         max-width: 350px;
         max-height: 350px;
         
     }
     .banner-text{
         order: 2;
         justify-content: center;
         align-items: center;
         text-align: center;
     }
     .banner-text h1{
         font-size: 28px;
line-height: 42px;
text-align: center;
     }
     .see-more{
         position: static;
     }
     .form{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         
     }
     
     .form-title{
         margin: 0;
         padding-top: 60%;
         background: none;
     }
    }

    /* Tablet Device */
    @media (min-width:701px) and (max-width:992px){
        header{
            max-width: 992px ;
            flex-wrap: wrap;
        }
        .popular-products,.creative{
         grid-template-columns: 1fr 1fr;
         row-gap:15px ;
         align-items: center;
    }
    .banner{
        grid-template-columns: 1fr;
    }
     .logos{
         display: none;
     }
      .see-more{
         position: static;
     }
     .form{
         margin-right: 60%;
     }
}

